--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,5 @@
 MONGODB_URI=mongodb+srv://phuquy:12345quy@groupdb.bosypil.mongodb.net/?retryWrites=true&w=majority&appName=groupDB
+JWT_SECRET=minhnhi
+CLOUDINARY_NAME=dthg3g7f0
+CLOUDINARY_API_KEY=511953973161765
+CLOUDINARY_API_SECRET=-Gk1xsIHOYwmy1AhSB4ZnwwUaHg
