--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "5.1.0",
-    "cloudinary": "^1.32.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -23,8 +23,13 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.18.3",
     "mongose": "^0.0.2-security",
-    "streamifier": "^0.1.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sharp": "^0.34.4",
+    "streamifier": "^0.1.1"
+  },
+  "devDependencies": {
+    "@types/multer": "^2.0.0",
+    "@types/sharp": "^0.31.1"
   }
 }
