--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "server": "npm run dev",
+    "seed": "node scripts/seedUsers.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
