--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,7 @@ JWT_SECRET=minhnhi
 CLOUDINARY_NAME=dthg3g7f0
 CLOUDINARY_API_KEY=511953973161765
 CLOUDINARY_API_SECRET=-Gk1xsIHOYwmy1AhSB4ZnwwUaHg
+
+SMTP_USER=nhi226542@student.nctu.edu.vn
+SMTP_PASS=zugq halr rxhs mhad
+SMTP_FROM="Group14 <nhi226542@student.nctu.edu.vn>"
