--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,8 @@
     "nodemon": "^3.1.10",
     "sharp": "^0.34.4",
     "streamifier": "^0.1.1"
+    ,
+    "nodemailer": "^6.9.3"
   },
   "devDependencies": {
     "@types/multer": "^2.0.0",
