--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^7.9.4",
     "tailwindcss": "^4.1.14"
   },
