--- a/Backend/.env
+++ b/Backend/.env
@@ -7,3 +7,11 @@ CLOUDINARY_API_SECRET=-Gk1xsIHOYwmy1AhSB4ZnwwUaHg
 SMTP_USER=nhi226542@student.nctu.edu.vn
 SMTP_PASS=zugq halr rxhs mhad
 SMTP_FROM="Group14 <nhi226542@student.nctu.edu.vn>"
+
+# Frontend Configuration
+FRONTEND_ORIGIN=http://localhost:5173
+
+# Server Configuration (set NODE_ENV=production for deployment)
+NODE_ENV=development
+PORT=3000
+HOST=0.0.0.0
